--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:22.04
+FROM --platform=linux/amd64 ubuntu:22.04 as builder
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libtermkey-dev ncurses-dev
@@ -7,3 +7,12 @@ COPY . /repo
 WORKDIR /repo
 RUN ./configure
 RUN make -j8
+
+RUN mkdir -p /deps
+RUN ldd /repo/vis-digraph | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+
+FROM ubuntu:22.04 as package
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/vis-digraph /repo/vis-digraph
+ENV LD_LIBRARY_PATH=/deps
