--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -5,14 +5,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libtermkey
 
 COPY . /repo
 WORKDIR /repo
-RUN ./configure
+RUN ./configure --prefix=/install
 RUN make -j8
-
-RUN mkdir -p /deps
-RUN ldd /repo/vis-digraph | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+RUN make install
 
 FROM ubuntu:22.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/vis-digraph /repo/vis-digraph
-ENV LD_LIBRARY_PATH=/deps
+COPY --from=builder /install /install
