--- a/mayhem/Dockerfile
+++ b/mayhem/Dockerfile
@@ -1,13 +1,15 @@
 FROM --platform=linux/amd64 ubuntu:22.04 as builder
 
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libtermkey-dev ncurses-dev
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential libtermkey-dev ncurses-dev clang
 
 COPY . /repo
 WORKDIR /repo
 RUN ./configure --prefix=/install
 RUN make -j8
 RUN make install
+RUN clang /repo/mayhem/fuzz_text_string_width.cpp -fsanitize=fuzzer,address /repo/text-util.c -o /fuzz 
 
 FROM ubuntu:22.04 as package
 COPY --from=builder /install /install
+COPY --from=builder /fuzz /fuzz_text_string_width
